@@ -1,4 +1,4 @@
-* Sun May 22 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.21
+* Mon May 23 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.21
 - Cluster changes from Michael, intended to prevent a stray master
   from trashing a cluster:
   + Ignore heartbeats from peers claiming to be the master before the
@@ -6,12 +6,15 @@
   + A master receiving a stray heartbeat sends a unicast HB back, which
     should cause the rogue to die due to the tie-breaker code.
   + Keep probing the master for late heartbeats.
-  + Drop BGP as soon as we become master with peers.
+  + Drop BGP as soon as we become master with the minumum required peers.
   + Any PING seen from a master forces an election (rather than just
     where basetime is zero).
   + A slave which receives a LASTSEEN message (presumably a restarted
     master) sends back new message type, C_MASTER which indicates the
     address of the current master.
+- New config option: cluster_master_min_adv which determines the minimum
+  number of up to date slaves required before the master will drop
+  routes.
 
 * Mon May 16 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.20
 - Add handling of "throttle=N" RADIUS attributes.
